==> iNavFlight/inav/lib/main/ChibiOS/os/hal/ports/AVR/MEGA/LLD/TIMv1/hal_pwm_lld.c <==
#include "hal.h"
#define TIM1_CS_OFFSET CS10
#define TIM1_WGM_OFFSET1 WGM10
#define TIM1_WGM_OFFSET2 WGM12

void pwm_lld_init(void) {

#if AVR_PWM_USE_TIM1 || defined(__DOXYGEN__)
  pwmObjectInit(&PWMD1);
  PWMD1.channels = PWM_CHANNELS;
#endif

#if AVR_PWM_USE_TIM2 || defined(__DOXYGEN__)
  pwmObjectInit(&PWMD2);
  PWMD2.channels = PWM_CHANNELS;
#endif

#if AVR_PWM_USE_TIM3 || defined(__DOXYGEN__)
  pwmObjectInit(&PWMD3);
  PWMD3.channels = PWM_CHANNELS;
#endif

#if AVR_PWM_USE_TIM4 || defined(__DOXYGEN__)
  pwmObjectInit(&PWMD4);
  PWMD4.channels = PWM_CHANNELS;
#endif

#if AVR_PWM_USE_TIM5 || defined(__DOXYGEN__)
  pwmObjectInit(&PWMD5);
  PWMD5.channels = PWM_CHANNELS;
#endif
}

void pwm_lld_start(PWMDriver *pwmp) {

  if (pwmp->state == PWM_STOP) {
    uint8_t cs_value, wgm_value;

#if AVR_PWM_USE_TIM2 || defined(__DOXYGEN__)
    if (pwmp == &PWMD2) {
      /* For now only fast pwm is supported. */
      wgm_value = 0x3;
      cs_value = 1;

      /* Period is fixed for timer2. */
      PWMD2.period = 0xFF;

      /* A prescaler value can only be a suitable power of 2 (1, 8, 32,
         64, 128 256 or 1024), so we choose the one that makes F_CPU
         divided by it equal to the given frequency (fallback value is
         1, to keep compatibility with old code. */
      const uint8_t log_ratio_timer2[] = {0, 3, 5, 6, 7, 8, 10};
      uint8_t n;
      for (n=0; n<sizeof(log_ratio_timer2)/sizeof(uint8_t); n++) {
        if (pwmp->config->frequency == (F_CPU >> log_ratio_timer2[n])) {
              cs_value = n + 1;
              break;
            }
      }

      TCCR2A = (wgm_value & 0x3) << TIM1_WGM_OFFSET1;
      TCCR2B = ((cs_value << TIM1_CS_OFFSET) |
                ((wgm_value >> 2) << TIM1_WGM_OFFSET2));
      if (pwmp->config->callback != NULL)
        TIMSK2 |= (1 << TOIE2);
      return;
    }
#endif

    /* For now only fast pwm is supported. */
    wgm_value = 0xE;
    cs_value = 0x5;

    /* A prescaler value can only be a suitable power of 2 (1, 8, 64,
       256 or 1024), so we choose the one that makes F_CPU divided by
       it equal to the given frequency (fallback value is 1024, to
       keep compatibility with old code. */
    const uint8_t log_ratio_timer1[] = {0, 3, 6, 8, 10};
    uint8_t n;
    for (n=0; n<sizeof(log_ratio_timer1)/sizeof(uint8_t); n++) {
      if (pwmp->config->frequency == (F_CPU >> log_ratio_timer1[n])) {
        cs_value = n + 1;
        break;
      }
    }

    uint8_t i = timer_index(pwmp);

    *regs_table[i].icr = pwmp->period;
    *regs_table[i].tccra = (wgm_value & 0x3) << TIM1_WGM_OFFSET1;
    *regs_table[i].tccrb = ((cs_value << TIM1_CS_OFFSET) |
                            ((wgm_value >> 2) << TIM1_WGM_OFFSET2));
    if (pwmp->config->callback != NULL)
      *regs_table[i].timsk = (1 << TOIE1);
  }
}

void pwm_lld_stop(PWMDriver *pwmp) {

#if AVR_PWM_USE_TIM2 || defined(__DOXYGEN__)
  if (pwmp == &PWMD2) {
    TCCR2A = 0;
    TCCR2B = 0;
    TIMSK2 = 0;
    return;
  }
#endif
  uint8_t i = timer_index(pwmp);
  *regs_table[i].tccra = 0;
  *regs_table[i].tccrb = 0;
  *regs_table[i].timsk = 0;
}

void pwm_lld_enable_channel(PWMDriver *pwmp,
                            pwmchannel_t channel,
                            pwmcnt_t width) {

  uint16_t val = width;

#if AVR_PWM_USE_TIM2 || defined(__DOXYGEN__)
  if (pwmp == &PWMD2) {
    config_channel(&TCCR2A,
                   7 - 2*channel,
                   6 - 2*channel,
                   pwmp->config->channels[channel].mode);
    /* Timer 2 is 8 bit. */
    if (val > 0xFF)
      val = 0xFF;
    switch (channel) {
    case 0: OCR2A = val; break;
    case 1: OCR2B = val; break;
    }
    TIFR2 = 1 << (OCF2A + channel);
    if (pwmp->config->channels[channel].callback)
      TIMSK2 |= (1 << (OCIE2A + channel));
    return;
  }
#endif

  uint8_t i = timer_index(pwmp);
  config_channel(regs_table[i].tccra,
                 7 - 2*channel,
                 6 - 2*channel,
                 pwmp->config->channels[channel].mode);
  volatile uint8_t *ocrh, *ocrl;
  switch (channel) {
  case 1:
    ocrh = regs_table[i].ocrbh;
    ocrl = regs_table[i].ocrbl;
    break;
  case 2:
    ocrh = regs_table[i].ocrch;
    ocrl = regs_table[i].ocrcl;
    break;
  default:
    ocrh = regs_table[i].ocrah;
    ocrl = regs_table[i].ocral;
  }
  *ocrh = val >> 8;
  *ocrl = val & 0xFF;
  *regs_table[i].tifr = (1 << (channel + 1));
  if (pwmp->config->channels[channel].callback != NULL)
    *regs_table[i].timsk |= (1 << (channel + 1));
}

void pwm_lld_disable_channel(PWMDriver *pwmp, pwmchannel_t channel) {

  uint8_t i = timer_index(pwmp);
  config_channel(regs_table[i].tccra,
                 7 - 2*channel,
                 6 - 2*channel,
                 PWM_OUTPUT_DISABLED);
  *regs_table[i].timsk &= ~(1 << (channel + 1));
}

void pwm_lld_enable_periodic_notification(PWMDriver *pwmp) {

  uint8_t i = timer_index(pwmp);
  *regs_table[i].timsk |= (1 << TOIE1);
}

void pwm_lld_disable_periodic_notification(PWMDriver *pwmp) {

  uint8_t i = timer_index(pwmp);
  *regs_table[i].timsk &= ~(1 << TOIE1);
}

void pwm_lld_enable_channel_notification(PWMDriver *pwmp,
                                         pwmchannel_t channel) {

  uint8_t i = timer_index(pwmp);
  *regs_table[i].timsk |= (1 << (channel + 1));
}

void pwm_lld_disable_channel_notification(PWMDriver *pwmp,
                                          pwmchannel_t channel) {

  uint8_t i = timer_index(pwmp);
  *regs_table[i].timsk &= ~(1 << (channel + 1));
}
