==> iNavFlight/inav/lib/main/ChibiOS/community/os/hal/ports/TIVA/LLD/PWM/hal_pwm_lld.c <==
#include "hal.h"

void pwm_lld_init(void)
{
  /* Driver initialization.*/
#if TIVA_PWM_USE_PWM0
  pwmObjectInit(&PWMD1);
  PWMD1.channels = PWM_CHANNELS;
  PWMD1.pwm = PWM0_BASE;
#endif

#if TIVA_PWM_USE_PWM1
  pwmObjectInit(&PWMD2);
  PWMD2.channels = PWM_CHANNELS;
  PWMD2.pwm = PWM1_BASE;
#endif
}

void pwm_lld_start(PWMDriver *pwmp)
{
  uint8_t i;
  uint32_t invert = 0;
  uint32_t enable = 0;
  uint32_t pwm = pwmp->pwm;

  if (pwmp->state == PWM_STOP) {
    /* Clock activation.*/
#if TIVA_PWM_USE_PWM0
    if (&PWMD1 == pwmp) {
      HWREG(SYSCTL_RCGCPWM) |= (1 << 0);

      while (!(HWREG(SYSCTL_PRPWM) & (1 << 0)))
        ;

      nvicEnableVector(TIVA_PWM0FAULT_NUMBER,
                       TIVA_PWM_PWM0_FAULT_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM0GEN0_NUMBER, TIVA_PWM_PWM0_0_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM0GEN1_NUMBER, TIVA_PWM_PWM0_1_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM0GEN2_NUMBER, TIVA_PWM_PWM0_2_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM0GEN3_NUMBER, TIVA_PWM_PWM0_3_IRQ_PRIORITY);
    }
#endif

#if TIVA_PWM_USE_PWM1
    if (&PWMD2 == pwmp) {
      HWREG(SYSCTL_RCGCPWM) |= (1 << 1);

      while (!(HWREG(SYSCTL_PRPWM) & (1 << 1)))
        ;

      nvicEnableVector(TIVA_PWM1FAULT_NUMBER,
                       TIVA_PWM_PWM1_FAULT_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM1GEN0_NUMBER, TIVA_PWM_PWM1_0_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM1GEN1_NUMBER, TIVA_PWM_PWM1_1_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM1GEN2_NUMBER, TIVA_PWM_PWM1_2_IRQ_PRIORITY);
      nvicEnableVector(TIVA_PWM1GEN3_NUMBER, TIVA_PWM_PWM1_3_IRQ_PRIORITY);
    }
#endif
  }
  else {
    /* Driver re-configuration scenario, it must be stopped first.*/
    HWREG(pwm + PWM_O_0_CTL) = 0;
    HWREG(pwm + PWM_O_1_CTL) = 0;
    HWREG(pwm + PWM_O_2_CTL) = 0;
    HWREG(pwm + PWM_O_3_CTL) = 0;
  }

  /* Timer configuration.*/
  for (i = 0; i  < (PWM_CHANNELS >> 1); i++) {
    HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_CTL) = 0;
    HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_GENA) = 0x08C;
    HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_GENB) = 0x80C;
    HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_LOAD) = (uint16_t)(pwmp->config->frequency - 1);
    HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_CMPA) = (uint16_t)(pwmp->period - 1);
    HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_CMPB) = (uint16_t)(pwmp->period - 1);
  }

  /* Output enables and polarities setup.*/
  for (i = 0; i < PWM_CHANNELS; i++) {
    switch (pwmp->config->channels[i].mode & PWM_OUTPUT_MASK) {
    case PWM_OUTPUT_DISABLED:
      enable &= ~(1 << i);
      break;
    case PWM_OUTPUT_ACTIVE_LOW:
      invert |= (1 << i);
      enable |= (1 << i);
      break;
    case PWM_OUTPUT_ACTIVE_HIGH:
      invert &= ~(1 << i);
      enable |= (1 << i);
      break;
    default:
      ;
    }
  }

  HWREG(pwm + PWM_O_INVERT) = invert;
  HWREG(pwm + PWM_O_ENABLE) = enable;
  HWREG(pwm + PWM_O_ISC) = 0xFFFFFFFF;
}

void pwm_lld_stop(PWMDriver *pwmp)
{
  uint32_t pwm = pwmp->pwm;

  /* If in ready state then disables the PWM clock.*/
  if (pwmp->state == PWM_READY) {
    HWREG(pwm + PWM_O_0_CTL) = 0;
    HWREG(pwm + PWM_O_1_CTL) = 0;
    HWREG(pwm + PWM_O_2_CTL) = 0;
    HWREG(pwm + PWM_O_3_CTL) = 0;

#if TIVA_PWM_USE_PWM0
    if (&PWMD1 == pwmp) {
      nvicDisableVector(TIVA_PWM0FAULT_NUMBER);
      nvicDisableVector(TIVA_PWM0GEN0_NUMBER);
      nvicDisableVector(TIVA_PWM0GEN1_NUMBER);
      nvicDisableVector(TIVA_PWM0GEN2_NUMBER);
      nvicDisableVector(TIVA_PWM0GEN3_NUMBER);
      HWREG(SYSCTL_RCGCPWM) &= ~(1 << 0);
    }
#endif

#if TIVA_PWM_USE_PWM1
    if (&PWMD2 == pwmp) {
      nvicDisableVector(TIVA_PWM1FAULT_NUMBER);
      nvicDisableVector(TIVA_PWM1GEN0_NUMBER);
      nvicDisableVector(TIVA_PWM1GEN1_NUMBER);
      nvicDisableVector(TIVA_PWM1GEN2_NUMBER);
      nvicDisableVector(TIVA_PWM1GEN3_NUMBER);
      HWREG(SYSCTL_RCGCPWM) &= ~(1 << 1);
    }
#endif
  }
}

void pwm_lld_enable_channel(PWMDriver *pwmp,
                            pwmchannel_t channel,
                            pwmcnt_t width)
{
  uint32_t pwm = pwmp->pwm;

  /* Changing channel duty cycle on the fly.*/
  if (channel & 1)
    HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_CMPB) = width;
  else
    HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_CMPA) = width;


  HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_CTL) = (1 << 0);
}

void pwm_lld_disable_channel(PWMDriver *pwmp, pwmchannel_t channel)
{
  uint32_t pwm = pwmp->pwm;

  if (channel & 1)
    HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_CMPB) = 0;
  else
    HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_CMPA) = 0;

  HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_CTL) = (1 << 0);
}

void pwm_lld_enable_periodic_notification(PWMDriver *pwmp)
{
  uint32_t inten;
  uint8_t i;
  uint32_t pwm = pwmp->pwm;

  /* If the IRQ is not already enabled care must be taken to clear it,
     it is probably already pending because the timer is running.*/
  for(i = 0; i < (PWM_CHANNELS >> 1); i++) {
    inten = HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_INTEN);
    if ((inten & 0x03) == 0) {
      HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_INTEN) |= 0x03;
      HWREG(pwm + pwm_generator_offsets[i] + PWM_O_X_ISC) = 0x03;
    }
  }

  HWREG(pwm + PWM_O_INTEN) = 0x3f;
}

void pwm_lld_disable_periodic_notification(PWMDriver *pwmp)
{
  uint32_t pwm = pwmp->pwm;

  HWREG(pwm + PWM_O_0_INTEN) = ~(0x03);
  HWREG(pwm + PWM_O_1_INTEN) = ~(0x03);
  HWREG(pwm + PWM_O_2_INTEN) = ~(0x03);
  HWREG(pwm + PWM_O_3_INTEN) = ~(0x03);

  HWREG(pwm + PWM_O_INTEN) &= ~(0x3F);
}

void pwm_lld_enable_channel_notification(PWMDriver *pwmp,
                                         pwmchannel_t channel)
{
  uint32_t pwm = pwmp->pwm;
  uint32_t inten = HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_ISC);

  /* If the IRQ is not already enabled care must be taken to clear it,
     it is probably already pending because the timer is running.*/
  if ((inten & (0x03 << (((channel & 1) * 2) + 2))) == 0) {
    HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_INTEN) |= (0x03 << (((channel & 1) * 2) + 2));
    HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_ISC) = (0x03 << (((channel & 1) * 2) + 2));
  }
}

void pwm_lld_disable_channel_notification(PWMDriver *pwmp,
                                          pwmchannel_t channel)
{
  uint32_t pwm = pwmp->pwm;

  HWREG(pwm + pwm_generator_offsets[channel >> 1] + PWM_O_X_INTEN) = ~(0x03 << (((channel & 1) * 2) + 2));
}
